fixed some spellings mistakes

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                                 to stay fit and follow healthy habbits in
                                 playfull way</span>,</p>
                         <p><span class="key">Achivment : </span><span class="value">Proposed this app in
-                                hackethon (KNOWCODE 24) by Society of Data Science at K.J. Somaiya Institue of
+                                hackathon (KNOWCODE 24) by Society of Data Science at K.J. Somaiya Institute of
                                 technology</span>,</p>
                         <p><span class="key">Certificate : </span><span class="value"><a
                                     href="https://drive.google.com/file/d/1uVtkPThy6V4lT6IS_cvK7K9Trot_Io71/view?usp=sharing">google
